<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.smartnote.ViewNote" >

    <item
        android:id="@+id/add"
        android:orderInCategory="100"
        android:title="@string/submit_addnote"
        android:icon="@drawable/ic_action_edit"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/search"
        android:title="@string/search_text"
        android:icon="@drawable/ic_action_search"
        app:showAsAction="collapseActionView|ifRoom"/>
    <item
        android:id="@+id/aboutus"
        android:title="@string/about"
        app:showAsAction="never"/>
    <item
        android:id="@+id/instruction"
        android:title="@string/instructions"
        app:showAsAction="never"/>
</menu>
