<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context="com.example.smartnote.AddNote"
    android:background="#4B7FDE"
    tools:ignore="MergeRootFrame" >
    
	<TableRow
	    android:id="@+id/row1"
	    android:layout_width="match_parent">
	    
		<EditText 
		    android:textSize="16sp"
		    android:id="@+id/edit_title_input"
		    android:hint="@string/add_note_title_hint"
		    android:textColor="#FFFFFF"
		    android:textColorHint="#FFFFFF"
		    android:textStyle="italic"
		    android:layout_weight="1"
		    android:layout_width="match_parent"
		    />

		<ImageButton
		    android:id="@+id/edit_voice_1"
		    android:background="#4B7FDE"
		    android:layout_width="match_parent"
		    android:layout_weight="1"
		    android:layout_height="wrap_content"
		    android:contentDescription="@string/add_by_voice"
		    android:src="@drawable/ic_action_microphone" />
	    
	</TableRow>
	<TableRow 
	    android:id="@+id/row2"
	    android:layout_width="match_parent">
		<Spinner 
		    android:id="@+id/priority_options"
		    android:layout_weight="1"
		    />

		<ImageButton
		    android:id="@+id/edit_voice_2"
		    android:background="#4B7FDE"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:layout_weight="1"
		    android:contentDescription="@string/add_by_voice"
		    android:src="@drawable/ic_action_microphone" />
	    	    
	    
	</TableRow>
	<TableRow 
	    android:id="@+id/row3" 
	    android:layout_width="match_parent">
		<EditText 
		    android:id="@+id/edit_note_body"
		    android:layout_width="match_parent"
		    android:layout_weight="1"
		    android:layout_height="wrap_content"
		    android:textColor="#FFFFFF"
		    android:hint="@string/add_note_hint"
		    android:textColorHint="#FFFFFF"
		    android:textSize="16sp"
		    android:textStyle="italic"
		    android:gravity="top"
		    android:lines="8"
		    />
		<ImageButton
		    android:id="@+id/edit_voice_3"
		    android:background="#4B7FDE"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:layout_weight="1"
		    android:contentDescription="@string/add_by_voice"
		    android:src="@drawable/ic_action_microphone" />
	</TableRow>
	<TableRow 
	    android:id="@+id/row4" 
	    android:layout_width="match_parent">
		<EditText
		    android:textSize="16sp" 
		    android:id="@+id/edit_tag_text"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:layout_weight="1"
		    android:hint="@string/add_tags_hint"
		    android:textColorHint="#FFFFFF"
		    android:textColor="#FFFFFF"
		    android:textStyle="italic"
		    android:gravity="top"
		    />
		<ImageButton
		    android:id="@+id/edit_voice_4"
		    android:background="#4B7FDE"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:contentDescription="@string/add_by_voice"
		    android:src="@drawable/ic_action_microphone" />
	</TableRow>
	<Button
	    android:id="@+id/choose_image"
	    android:textColor="#FFFFFF"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:textStyle="italic"
	    android:text="@string/select_image" />
	<Button
	    android:id="@+id/edit_note_submit"
	    android:textColor="#FFFFFF"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:textStyle="italic"
	    android:text="@string/submit_updatenote" />
</TableLayout>

